ImpexAST/src/test/resources/errors/parser-invalid-subtype.impex
INSERT_UPDATE Usergroup;uid[unique=true];groups(uid)[mode=append]
-3;regulargroup;customergroup
;othergroup;lastgroup